--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,5 @@
 section {
-    padding: 5px;
+    padding: 1px;
     direction: rtl;
     display: grid;
     grid-template-columns: repeat(5,  auto);
@@ -8,7 +8,11 @@ section {
 }
   
 .item {
-    padding: 1px;
+    padding: 0;
     cursor: move; 
     background-color: red; 
+}
+
+img {
+    
 }
