--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org">
 <head>
-	<title>Slide Navbar</title>
+	<title>QMaster Log in/Sign up</title>
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/login-style.css">
 	
@@ -28,13 +28,7 @@
 					<input type="password" name="password2" placeholder="Password again" >
 					<button type="submit" 
 					id="signupbutton">Sign up</button>
-					<div id="message">
-						<h3>Password must contain the following:</h3>
-						  <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-						  <p id="number" class="invalid">A <b>number</b></p>
-						  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-					</div>
-						
+					
 				</form>
 			</div>
 			<div class="login">
